// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders the Checkbox component 1`] = `
<input
  class="dusk-checkbox"
  id="test"
  name="test"
  type="checkbox"
/>
`;

exports[`Checkbox > renders the Checkbox component in a checked state 1`] = `
<input
  class="dusk-checkbox"
  id="test"
  name="test"
  type="checkbox"
/>
`;

exports[`Checkbox > renders the Checkbox component in a disabled state 1`] = `
<input
  class="dusk-checkbox"
  disabled=""
  id="test"
  name="test"
  type="checkbox"
/>
`;

exports[`Checkbox > renders the Checkbox component in a disabled, checked state 1`] = `
<input
  class="dusk-checkbox"
  disabled=""
  id="test"
  name="test"
  type="checkbox"
/>
`;
